2007-02-13  Akim Demaille  <demaille@gostai.com>

	Pretend we program in C++ and use operators
	* src/ustring.hh, src/ustring.cc (equal): Remove, replaced by...
	(operator==): these two.
	* src/ubinder.cc, src/ucommand.cc, src/uconnection.cc,
	* src/ueventhandler.cc, src/uexpression.cc, src/uobj.cc,
	* src/uvariablename.cc: Use them.

2007-02-13  Akim Demaille  <demaille@gostai.com>

	Less new (but not older)
	* src/ubinder.hh, src/ubinder.cc (Monitor::objects): Let it
	be a list of UString, not of UString*.

2007-02-13  Akim Demaille  <demaille@gostai.com>

	Address a bit of the UString mess
	* src/ustring.hh, src/ustring.cc: Start to spread some more &
	instead of *.
	* src/parser/bison/ugrammar.y, src/ubinder.cc, src/ucommand.cc,
	* src/uconnection.cc, src/ueventhandler.cc, src/ugroup.cc,
	* src/uobj.cc, src/userver.cc, src/userver.hh, src/uvalue.cc,
	* src/uvariable.cc: Adjust in the most stupid way: add a *
	to arguments.
	Later passes will improve the code.
	Let's do that bit after bit.

2007-02-13  Akim Demaille  <demaille@gostai.com>

	An iterator has to be named i
	* src/uasyncregister.cc: Unless you have a good reason :).
	Remove useless includes.

2007-02-13  Akim Demaille  <demaille@gostai.com>

	Use LIBPORT_FD_ISSET
	* src/network/bsdnet/network.cc: here.

2007-02-13  Akim Demaille  <demaille@gostai.com>

	Remove UString::(un_)?armor
	* src/ustring.hh, src/ustring.cc (un_armor, armor): Remove.
	* src/uvalue.cc: Just call libport::escape here.

2007-02-13  Akim Demaille  <demaille@gostai.com>

	svn merge -r 857:860 https://svn.gostai.com/svn/kernel1/branches/1.0

	2007-02-13  Akim Demaille  <demaille@gostai.com>
	Handle escapes in the scanner itself
	* src/parser/bison/utoken.l: Do that.
	* src/parser/bison/ugrammar.y: Add a std::string field to %union.
	* src/ustring.cc (armor): Use hex escapes.

	2007-02-13  Akim Demaille  <demaille@gostai.com>
	Rename ugrammar's str as ustr
	* src/parser/bison/ugrammar.y,